## Process this file with automake to produce Makefile.in
#====================================================================
#
# $Id$
#

# documenttion subdirectories
SUBDIRS=api nxdict
nxdocdir		= $(NXDOCDIR)

# add files and example code here from this directory
nxdoc_DATA		= README.doc

EXTRA_DIST		= README.doc
